refactor: simplify command validation